feat: 1.18.2への対応、ランキングページURL変更への対応、各種コードスタイル修正 (#30)
* feat: Paper1.18.2への対応

* fix: ランキングページURLの変更

* fix: インスペクションの適用

* fix: `Component.text().append(` のリプレイス

* style: 冗長な改行を改善

* Revert "style: 冗長な改行を改善"

This reverts commit 68bb7831d9b501107b407ee2f27441d66d1d1054.

* style: インデントなどがおかしい問題の修正

* fix: 勝手にコード再配置されたので修正

* fix: String.formatをString.formattedに変更